# emergency_notification_system_prototype

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: contact.py  contact_method.py  delivery.py  exception.py  group.py  notification.py  notification_template.py
app/core/: config.py  logging.py
app/db/: deps.py  repositories_registry.py  session.py  transaction.py  uow.py
app/exceptions/: base.py  contact.py  contact_import.py  contact_method.py  delivery.py  group.py  notification.py  notification_template.py  validation.py
app/models/: __init__.py  contact.py  contact_method.py  delivery.py  group.py  group_contact.py  notification.py  notification_template.py
app/providers/: base.py  email.py  provider_registry.py  telegram.py
app/repositories/: active.py  base.py  contact.py  contact_method.py  delivery.py  group.py  notification.py  notification_template.py
app/schemas/: contact.py  contact_import.py  contact_method.py  delivery.py  group.py  notification.py  notification_template.py
app/services/: contact.py  contact_method.py  delivery.py  group.py  notification.py  notification_template.py
app/tasks/: notification.py
docker/migrations/: Dockerfile
migrations/: env.py
migrations/versions/: 6efb60fe1215_initial_migration.py
tests/: conftest.py
tests/fakes/: fake_uow.py
tests/fixtures/: contact.py  contact_method.py  contact_method_service.py  contact_service.py  delivery.py  delivery_service.py  group.py  group_service.py  notification.py  notification_service.py  uow.py  (+2 more)
(+25 files in other folders)
