[project]
name = "ens"
version = "0.1.0"
description = "Emergency Notification System"
authors = [
    {name = "Alex D."}
]
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "phonenumbers (>=9.0.29,<10.0.0)",
    "requests (>=2.34.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.2,<2.0.0)"
]
